fixed button issue on mobile, added readme

--- a/src/Components/Board/Board.css
+++ b/src/Components/Board/Board.css
@@ -26,7 +26,7 @@
   width: 50%;
   border: none;
   background-color: #140d4f;
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   color: #6fedb7;
   margin-top: 3%;
 }
